--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,17 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 100px;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: white;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: #222;
+  border-bottom: 1px solid #222;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .App-title {
@@ -20,6 +22,19 @@
 
 .App-intro {
   font-size: large;
+}
+
+.gen-button {
+  width: 150px;
+  height: 50px;
+  background-color: #ff7a59;
+  color: white;
+}
+
+.top {
+  border-bottom: 1px solid #222;
+  width: 80%;
+  margin: 0 auto;
 }
 
 @keyframes App-logo-spin {
