--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,12 @@
   margin: 0 auto;
 }
 
+.gen-text {
+  text-decoration: underline;
+  color: blue;
+}
+
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
